web/searxng/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: searxng
  namespace: web
  labels:
    app: searxng
spec:
  ports:
    - name: server
      port: 8080
  selector:
    app: searxng
